# embedded-msp430

./: Cargo.toml
msp430-periph/: build.rs
src/: main.rs
